# FlutterApps

./: .gitignore  Dockerfile  README.md  documentationtask.md  i18n_audit.md  missing_i18n_strings.md  versions.json
assets/: App_Icons_2023.psd  Materialien_Rollladen_Vorlage.psd  app_icons_2024.psd  becker_logo_claim.psd
assets/AppIcons 2024/: Vorstellungsgrafik_Playstore.psd
assets/stick_fw/: CP_USB_Stick_BA-v163_REL.uf2  CP_USB_Stick_BA-v165_REL.uf2  CP_USB_Stick_BA-v166_REL.uf2
control_tool/: README.md  pubspec.yaml
control_tool/lib/: extra_translations.dart  home.dart  main.dart
control_tool/linux/: CMakeLists.txt
control_tool/web/: index.html  manifest.json
control_tool/windows/: CMakeLists.txt
install_tool/: CHANGELOG.md  README.md  notes.md  pubspec.yaml  strings.pot  upload-keystore.jks  upload-keystore.txt
install_tool/android/: settings.gradle
install_tool/lib/: extra_translations.dart  home.dart  licenses_view.dart  main.dart  oss_licenses.dart
install_tool/linux/: CMakeLists.txt
install_tool/macos/: .gitignore
install_tool/test/: widget_test.dart
install_tool/windows/: CMakeLists.txt
modules/mod_cc_eleven/: README.md  pubspec.yaml
modules/mod_cen_plus/: README.md  pubspec.yaml
modules/mod_evo/: README.md  pubspec.yaml
modules/mod_gateway/: README.md  pubspec.yaml
modules/mod_timecontrol/: README.md  pubspec.yaml
modules/mod_update_file/: README.md  pubspec.yaml
plugins/hydrogen_flutter/src/: CMakeLists.txt  hydrogen_flutter.c
service_app/: README.md  pubspec.yaml
tools/: README.md  i18n_audit.py
(+467 files in other folders)
